# WISPR-AI

./: .env.example  .gitignore  README.md  config.py  main.py  requirements.txt
agents/: __init__.py  base_agent.py  coder_agent.py  core_agent.py  orchestrator.py  react_agent.py  search_agent.py  studio_agent.py
api/: __init__.py  routes.py
coding/: __init__.py  deployment.py  engine.py
coding/agents/: __init__.py  architect.py  ask.py  code.py  debug.py  orchestrator.py
coding/chat/: __init__.py  router.py
coding/session/: __init__.py  manager.py
coding/tools/: __init__.py  audit_log.py  file_tools.py
coding/xencode/: __init__.py  engine.py  finalizer.py  planner.py  schemas.py  spec_parser.py  validator.py  writer.py
desktop/: index.html  package.json  vite.config.ts
desktop/src/: App.css  App.tsx  index.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src/components/: ChatMode.tsx  CodingMode.tsx  FileTree.tsx  MonacoEditor.tsx  StreamLog.tsx
hallucination/: __init__.py  reducer.py
llm/: __init__.py  router.py
memory/: __init__.py  long_term.py  manager.py  session.py  short_term.py  store.py  task_memory.py
plugins/: __init__.py  calculator_plugin.py  manager.py  plugin_manager.py  text_stats_plugin.py
reasoning/: __init__.py  engine.py
search/: __init__.py  mega_search.py
static/: index.html
studio/: __init__.py  ide.py
tests/: test_api.py  test_code_engine.py  test_coding.py  test_hallucination.py  test_llm_router.py  test_memory.py  test_plugins.py  test_studio.py  test_wispr.py  test_xencode.py
